portfolio-hugo-varloud-meyer/src/components/Home/Home.css
@import url('https://fonts.googleapis.com/css?family=Roboto:700');

.home-container {
    display: flex;
    height: 65vh;
    flex-direction: column;
    align-items: center;
    background-color: #999d9e;
    margin-top: 1vh;
    margin-left: 1vw;
    border-radius: 30px 30px 0%;
    width: 93vw;
}

.section1 {
    width: 65vw;
    height: 101vh;
    /* background-image: url(https://dennissnellenberg.com/assets/img/DSC07033.jpg); */
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
}

/* CURVE BOTTOM PART START */


.topDiv {
    position: absolute;
    width: 5vw;
    height: 100vh;
    background-color: #fff;
    right: 1vw;
    top: 0;
    z-index: 5;
}

.topLeft {
    position: absolute;
    width: 100%;
    height: 10%;
    top: 0;
    left: 0;
    background-color: #999d9e;
}

.topRight {
    position: absolute;
    width: 100%;
    height: 89vh;
    top: 10%;
    background-color: #999d9e;
    border-bottom-right-radius: 30px;
    border-top-right-radius: 30px;
}

.topCover {
    position: absolute;
    width: 5vw;
    height: 10vh;
    right: 0;
    background-color: #ffffff;
    border-bottom-left-radius: 30px;
    z-index: 1;
}

/*
.topCover {
    position: absolute;
    width: 100%;
    height: 270px;
    background-color: #ffffff;
    border-top-right-radius: 30px;
    z-index: 1;
}

.topRight {
    position: absolute;
    top: 0;
    padding: 1rem;
    width: -webkit-fill-available;
    left: 30%;
    height: 228px;
    min-height: 20px;
    background-color: #999d9e;
    border-bottom-left-radius: 30px;
    border-bottom-right-radius: 30px;
    margin-right: 0.5%;
} */

/* END OF TOP RIGHT CORNER CUVER */

/* CURVE BOTTOM PART START */

.left {
    position: absolute;
    width: 30%;
    height: 100%;
    top: 0;
    left: 0;
}

.curve {
    position: absolute;
    width: 100%;
    height: 100%;
    background-color: #999d9e;
}

.cover {
    position: absolute;
    width: 100%;
    height: 270px;
    background-color: #ffffff;
    border-top-right-radius: 30px;
    z-index: 1;
}

.right {
    position: absolute;
    top: 0;
    width: -webkit-fill-available;
    left: 30%;
    height: 33vh;
    min-height: 20px;
    background-color: #999d9e;
    border-bottom-left-radius: 30px;
    border-bottom-right-radius: 30px;
    margin-right: 1vw;
}

.bottomDiv {
    position: relative;
    width: var(--width);
    height: 200px;
    padding-top: 30px;
    max-width: var(--max-width);
    background-color: rgb(255, 255, 255);
    display: flex;
}

.textPart {
    background-color: #606364;
    color: #ffffff;
    width: 90%;
    height: 30vh;
    z-index: 1;
    position: absolute;
    margin: 5%;
    border-radius: 30px;
}

.textPart ul {
    list-style-type: none;
    padding: 15px;
    margin: 0;
    font-size: 17px;
    font-weight: 400;
}

/* CURVE PART END */


/* BOTTOM LEFT TEXT ANIMATION START */

 @keyframes showTopText {
	 0% {
		 transform: translate3d(0, 100%, 0);
	}
	 40%, 60% {
		 transform: translate3d(0, 50%, 0);
	}
	 100% {
		 transform: translate3d(0, 0, 0);
	}
}
 @keyframes showBottomText {
	 0% {
		 transform: translate3d(0, -100%, 0);
	}
	 100% {
		 transform: translate3d(0, 0, 0);
	}
}
 .animated-title {
	 color: #ffffff;
	 font-family: Roboto, Arial, sans-serif;
	 height: 300px;
	 left: 50%;
	 position: absolute;
	 top: 60%;
	 transform: translate(-50%, -50%);
	 width: 300px;
}
 .animated-title > div {
	 height: 50%;
	 overflow: hidden;
	 position: absolute;
	 width: 100%;
}
 .animated-title > div div {
	 font-size: 25px;
	 padding: 20px;
	 position: absolute;
}
 .animated-title > div div span {
	 display: block;
}
 .animated-title > div.text-top {
	 border-bottom: 1px solid #ffffff;
	 top: 0;
}
 .animated-title > div.text-top div {
	 animation: showTopText 1s;
	 animation-delay: 0.5s;
	 animation-fill-mode: forwards;
	 bottom: 0;
	 transform: translate(0, 100%);
}
 .animated-title > div.text-top div span:first-child {
	 color: #a8a8a8;
}
 .animated-title > div.text-bottom {
	 bottom: 0;
}
 .animated-title > div.text-bottom div {
	 animation: showBottomText 0.5s;
	 animation-delay: 1.75s;
	 animation-fill-mode: forwards;
	 top: 0;
	 transform: translate(0, -100%);
}
 
/*  */

@media (max-width: 1200px), (max-height: 670px) {
    .section-container {
        display: flex;
        height: 101vh;
        width: 100vw;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        background-attachment: fixed;
        background-position: center;
        background-size: cover;
        color: var(--color);
        row-gap: 4rem;
        text-align: center;
        background-color: #999d9e;
    }

    .home-container {
        display: flex;
        flex-direction: column;
        align-items: center;
        background-color: #999d9e;
        height: 100vh;
        border: 0px solid white;
        margin-top: 0%;
        margin-left: 0%;
        margin-right: 0%;
        border-radius: 0%;
        width: 100vw;
        margin: 0;
    }

    .section1 {
        height: 101vh;
        width: 100vw;
        background-size: cover;
        background-repeat: no-repeat;
        background-position: center;
        background-color: #9a9e9f;
        background-position: center center;
    }

    /* MAKE INVISIBLE THE DESKTOP PART */

    .bottomDiv {
        display: none;
    }

    .topDiv {
        display: none;
    }
    .topRight {
        display: none;
    }
    .topMiddle {
        display: none;
    }

    /* END OF THE CURVED DESTOP PART HIDDING */
}

